feat: fixed api and got insertion working for tasks.
